[project]
name = "events-app"
version = "0.1.0"
description = ""
authors = [
    {name = "codebyandy",email = "andyvhuynh@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "supabase (>=2.13.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
supabase = "^2.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
